# qa_guru_python_8_17

./: README.md
poetry_project/: pyproject.toml
