[tool.poetry]
name = "poentry-project"
version = "0.1.0"
description = ""
authors = ["Mariya Zhurova <mzhurova4@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = ">=7.4.2,<7.5.0"
selene = ">=2.0.0b4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
